--- a/index.html
+++ b/index.html
@@ -3328,7 +3328,7 @@
 												</div>
 											</div>
 											<br>
-											<form action="success.php" method="POST" id="order_form" class="al-form" style="width: 350px;">
+											<form action="https://slovmoes.ru/3/success.php" method="POST" id="order_form" class="al-form" style="width: 350px;">
 												<input type="hidden" name="subid" value="{subid}">
 
 										
